--- a/force-app/main/default/classes/MedicalAppointmentTriggerHandler.cls
+++ b/force-app/main/default/classes/MedicalAppointmentTriggerHandler.cls
@@ -1,4 +1,37 @@
 public with sharing class MedicalAppointmentTriggerHandler {
+
+  public void insurenceCheck(List <Medical_Appointment__c> TriggerNew, Map<Id, Medical_Appointment__c> newMap ){
+    
+    List<Medical_Appointment__c> newAppointments =[ 
+        SELECT Patient__c
+        FROM Medical_Appointment__c
+        WHERE Id IN :TriggerNew AND Medical_Facility__r.Type__c = 'Hospital'
+    ];
+    
+    Set<Id> patientIds = new Set<Id>();
+    for (Medical_Appointment__c appointment : newAppointments) {
+        patientIds.add(appointment.Patient__c);  
+    }
+ 
+    List<Medical_Insurence__c> newInsurances=[
+     SELECT Insured_Person__c
+     FROM Medical_Insurence__c
+     WHERE Insured_Person__c IN :patientIds
+    ];
+    
+    Set<Id> insuredPatients = new Set<Id>();
+    for (Medical_Insurence__c insurance : newInsurances) {
+        insuredPatients.add(insurance.Insured_Person__c);
+    }
+   
+    
+    for (Medical_Appointment__c appointment : newAppointments) {
+        if (!insuredPatients.contains(appointment.Patient__c)  ) { 
+            newMap.get(appointment.Id).addError('Cannot add patient without insurance!');
+        }
+    }
+  }
+
   public void sendAppointmentEmail(
     List<Medical_Appointment__c> triggerNew,
     Map<Id, Medical_Appointment__c> oldMap
